test/distributions/robust/arithmetic/basics/test_reshape.replicated.good
LOCALE0:
1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
LOCALE1:
1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
LOCALE2:
1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
LOCALE3:
1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
LOCALE0:
1 2 3 4 5 6
7 8 9 10 11 12
13 14 15 16 17 18
19 20 21 22 23 24
LOCALE1:
0 0 0 0 0 0
0 0 0 0 0 0
0 0 0 0 0 0
0 0 0 0 0 0
LOCALE2:
0 0 0 0 0 0
0 0 0 0 0 0
0 0 0 0 0 0
0 0 0 0 0 0
LOCALE3:
0 0 0 0 0 0
0 0 0 0 0 0
0 0 0 0 0 0
0 0 0 0 0 0
LOCALE0:
0 0 0
0 0 0
0 0 0
0 0 0

0 0 0
0 0 0
0 0 0
0 0 0
LOCALE1:
0 0 0
0 0 0
0 0 0
0 0 0

0 0 0
0 0 0
0 0 0
0 0 0
LOCALE2:
0 0 0
0 0 0
0 0 0
0 0 0

0 0 0
0 0 0
0 0 0
0 0 0
LOCALE3:
0 0 0
0 0 0
0 0 0
0 0 0

0 0 0
0 0 0
0 0 0
0 0 0
test_reshape.chpl:19: error: halt reached - reshape(A,D) is invoked when A has 96 elements, but D has 24 indices
